Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/varargs/ElementTypeMissingTest.out
ElementTypeMissingTest.java:8:46: compiler.err.cant.resolve.location: kindname.class, Unkn, , , (compiler.misc.location: kindname.class, ElementTypeMissingTest, null)
1 error