Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/varargs/ElementTypeMissingTest.java
/*
 * @test /nodynamiccopyright/
 * @bug 8193142
 * @summary Regression: ClassCastException: Type$ErrorType cannot be cast to Type$ArrayType
 * @compile/fail/ref=ElementTypeMissingTest.out -XDrawDiagnostics -XDdev ElementTypeMissingTest.java
 */

public class ElementTypeMissingTest { void m(Unkn... own) { } }